--- a/index.css
+++ b/index.css
@@ -178,6 +178,7 @@ h1{
 }
 .main .container{
     padding-top: 215px;
+    padding-bottom: 100px;
     display: flex;
     flex-direction: column;
     gap: 33px;
